feat: added controllers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(QBATask VERSION 0.1 LANGUAGES CXX)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(Qt6 6.2 COMPONENTS Quick REQUIRED)
+find_package(Qt6 6.2 COMPONENTS Quick Xml REQUIRED)
 
 qt_add_resources(RESOURCES  qbataskresources.qrc)
 
@@ -13,6 +13,10 @@ qt_add_executable(appQBATask
     main.cpp
     Application.hpp Application.cpp
     QmlGlobal.hpp   QmlGlobal.cpp
+    UdpController.hpp UdpController.cpp
+    XmlController.hpp XmlController.cpp
+    UdpSender.hpp UdpSender.cpp
+    UdpReceiver.hpp UdpReceiver.cpp
 )
 
 add_subdirectory(ui)
@@ -21,6 +25,7 @@ target_link_libraries(appQBATask
     PRIVATE
     MainWindowModule
 )
+
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
@@ -34,7 +39,10 @@ set_target_properties(appQBATask PROPERTIES
 )
 
 target_link_libraries(appQBATask
-    PRIVATE Qt6::Quick)
+    PRIVATE Qt6::Quick
+    PRIVATE Qt6::Core
+    PRIVATE Qt6::Xml
+)
 
 include(GNUInstallDirs)
 install(TARGETS appQBATask
