fix:udp send receive errors Add connect status notify

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,8 @@ project(QBATask VERSION 0.1 LANGUAGES CXX)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(Qt6 6.2 COMPONENTS Quick Xml REQUIRED)
+find_package(Qt6 6.2 COMPONENTS Quick Xml Concurrent REQUIRED)
 
-qt_add_resources(RESOURCES  qbataskresources.qrc)
 
 qt_add_executable(appQBATask
     main.cpp
@@ -17,6 +16,7 @@ qt_add_executable(appQBATask
     XmlController.hpp XmlController.cpp
     UdpSender.hpp UdpSender.cpp
     UdpReceiver.hpp UdpReceiver.cpp
+    AppMessages.hpp AppMessages.cpp
 )
 
 add_subdirectory(ui)
@@ -42,6 +42,7 @@ target_link_libraries(appQBATask
     PRIVATE Qt6::Quick
     PRIVATE Qt6::Core
     PRIVATE Qt6::Xml
+    PRIVATE Qt6::Concurrent
 )
 
 include(GNUInstallDirs)
