--- a/ui/CMakeLists.txt
+++ b/ui/CMakeLists.txt
@@ -10,5 +10,8 @@ qt_add_qml_module(MainWindowModule
         ReceiverDialog.qml
         CanDialog.qml
         DriveShapes.qml
+    RESOURCES
+         ../images/felif.png
+         ../doc/test.xml
     NO_PLUGIN
 )
